apply plugin: 'com.android.application'

android {
    compileSdkVersion 34
    defaultConfig {
        applicationId "com.lgh.tapclick"
        minSdkVersion 24
        targetSdkVersion 34
        versionCode 102
        versionName "10.2"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        javaCompileOptions {
            annotationProcessorOptions {
                includeCompileClasspath = true
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField("String", "BUILD_TIME", "\"" + new Date().toString() + "\"")
        }
        debug {
            minifyEnabled false
            shrinkResources false
            buildConfigField("String", "BUILD_TIME", "\"" + new Date().toString() + "\"")
        }
    }
    buildFeatures {
        viewBinding true
    }
    compileOptions {
        targetCompatibility JavaVersion.VERSION_1_8
        sourceCompatibility JavaVersion.VERSION_1_8
    }
    signingConfigs {
        release {
            keyAlias '*'
            keyPassword '*'
            storeFile file('../adgo.jks')
            storePassword '*'
        }
        debug {
            keyAlias '*'
            keyPassword '*'
            storeFile file('../adgo.jks')
            storePassword '*'
        }
    }
    lintOptions {
        checkReleaseBuilds false
    }
    packagingOptions {
        exclude 'classes.dex'
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.6.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
    implementation 'androidx.room:room-runtime:2.4.3'
    annotationProcessor 'androidx.room:room-compiler:2.4.3'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.0.0'
    implementation 'me.codeboy.android:align-text-view:2.3.2'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'commons-codec:commons-codec:1.16.0'
    implementation 'io.apisense:rhino-android:1.2.0'
}
